[gd_scene load_steps=4 format=3 uid="uid://cwpkl00816i70"]

[ext_resource type="Script" uid="uid://du144f15r042g" path="res://scripts/menu.gd" id="1_con2f"]
[ext_resource type="Texture2D" uid="uid://bbfuyapx01l01" path="res://backgrounds/menu.jpg" id="1_yqeox"]
[ext_resource type="AudioStream" uid="uid://csf12ne745avv" path="res://music/menu.ogg" id="2_vjb58"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_con2f")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yqeox")
expand_mode = 2
stretch_mode = 4

[node name="MainMenu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MainMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "title"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.5
offset_top = -52.0
offset_right = 118.5
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="PlayButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "mm_play"

[node name="SettingsButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "mm_settings"

[node name="CreditsButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "mm_settings"

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "mm_quit"

[node name="Settings" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Settings"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 70.0
grow_horizontal = 2

[node name="MusicLabel" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "music"

[node name="MusicSlider" type="HSlider" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="SoundsLabel" type="Label" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "sounds"

[node name="SoundSlider" type="HSlider" parent="Settings/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "mm_fullscreen"

[node name="Button" type="Button" parent="Settings/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "mm_back"

[node name="Credits" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Credits/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Created by Javier Morales for the Godot WIld Jam 81

Music from patrickdearteaga.com and incompetech.com

Images from unsplash.com

This game and its source code is licensed under the GPL license
"

[node name="BackButton" type="Button" parent="Credits/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "mm_back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_vjb58")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="MainMenu/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
